# examples-cpp

./: .editorconfig  .gitignore  README.md
.devcontainer/: Dockerfile  compose.develop.yaml  devcontainer.json  docker-compose.yml
app/algorithms/sorting/: buble_sort.c
apps/algorithms/: CMakeLists.txt  Makefile  README.md  meson.build
apps/algorithms/sorting/: CMakeLists.txt  Makefile  heap-sort.c  merge-sort.c  meson.build  quick-sort.c  selection-sort.c  shaker_sort.c  shell-sort.c
apps/desktop/gtk/: README.md
apps/desktop/gtk/src/: gtk_getting_started_0.c  gtk_getting_started_1.c  gtk_getting_started_2.c  gtk_getting_started_3.c  gtk_getting_started_4.c
apps/desktop/gtk/ui/: gtk_getting_started_3-window.ui
apps/web/fcgi/: README.md
apps/web/fcgi/src/: tiny-fcgi.c
desktop/gtk/: README.md
desktop/gtk/src/: gtk_getting_started_2.c  gtk_getting_started_3.c  gtk_getting_started_4.c
web/fcgi/: Makefile  README.md
web/fcgi/src/: tiny-fcgi.c
