# project('algorithms-sorting', 'c')

executable('bubble-sort', 'bubble-sort.c')
executable('shaker-sort', 'shaker-sort.c')
executable('shell-sort', 'shell-sort.c')
executable('selection-sort', 'selection-sort.c')
executable('heap-sort', 'heap-sort.c')
executable('merge-sort', 'merge-sort.c')
executable('quick-sort', 'quick-sort.c')
